[workspace]
resolver = "2"

members = ["components", "web-macros"]

[workspace.dependencies]

axum = { version = "0.7.1" }
axum-extra = { version = "0.9.0", features = ["form", "cookie"] }
axum-flash = { version = "0.8.0" }
axum-macros = { version = "0.4.0" }
once_cell = { version = "1.18.0" }
proc-macro2 = { version = "1.0.69" }
quote = { version = "1.0.33" }
rscx = { version = "0.1.11" }
serde = { version = "1.0.188" }
serde_json = { version = "1.0.107" }
sha256 = { version = "1.4.0" }
syn = { version = "2.0.38" }
tokio = { version = "1.32.0" }
tower-http = { version = "0.5.0" }
typed-builder = { version = "0.18.0" }
