[package]
name = "components"
version = { workspace = true }
edition = "2021"
authors = ["Tavish Pegram"]
license = "MIT"
description = "HTMX enabled components for Axum"
readme = "../README.md"

[dependencies]
axum = { workspace = true }
axum-flash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }
rscx = { workspace = true }
once_cell = { workspace = true }
web-macros = { path = "../web-macros" }
typed-builder = { workspace = true }

[build-dependencies]
sha256 = { workspace = true }
