[package]
name = "rscx-web-macros"
version = { workspace = true }
edition = "2021"
authors = ["Tavish Pegram"]
license = "MIT"
description = "A set of macros enhancing RSCX components in Rust"
readme = "../README.md"
documentation = "https://docs.rs/components"
homepage = "https://www.github.com/tavishpegram/rust-htmx-components"
repository = "https://www.github.com/tavishpegram/rust-htmx-components"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
