[package]
name = "playground"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = { version = "0.7.1", features = ["multipart"] }
axum-extra = { version = "0.9.0", features = ["form", "cookie"] }
axum-flash = { version = "0.8.0" }
axum-macros = { version = "0.4.0" }
rscx = { version = "0.1.11" }
serde = { version = "1.0.188" }
serde_json = { version = "1.0.107" }
sha256 = { version = "1.4.0" }
syn = { version = "2.0.38" }
tokio = { version = "1.32.0" }
tower-http = { version = "0.5.0" }
typed-builder = { version = "0.18.0" }
htmx-components = { path = "../../htmx-components" }
rscx-web-macros = { path = "../../rscx-web-macros" }
